fwupd: move blocking dbus call into the initialization thread

BUG: 399341